feat: add auth middleware
